LuckyStackWorker - RELEASE NOTES
================================
1/7/2022: revision release 2.0.1
- Fixed issue with cropping selection using the wrong mouse picker after deselecting the ROI.
- Using 2 decimals for saturation
- Fixed minor layout alignment issue.

30/6/2022: major release 2.0.0
- Added a new panel for denoising. Added 3 new sliders for controlling the sigma, radius and number of iterations of the sigma filter denoising.
- Added saturation control slider
- Added cropping function
- Added Mouse hand control to scroll through images larger than the window size
- Added an automatic new version notification
- More compact UI layout design
- Added hover on buttons
- Replaced slider thumbs with immediate indicator value on the right
- Added spinner when processing large images

25/5/2022 revision release 1.4.1:
- Fixed some minor layout issues.

21/5/2022 minor release 1.4.0:
- Added profile saving in a yaml file along with the TIF whenever profile is applied.
- Profile is saved to a yaml file also for every reference image that is saved.
- Profile is now loaded first from yaml file if found. If not it will load it from the database.
- Added a Load Profile button to allow selecting the profile from earlier saved yaml file.

26/3/2022 revision release 1.3.3:
- Fixed worker not processing file stacks orgininating from recordings using older versions of Firecapture that used a different profile prefix.

13/3/2022 revision release 1.3.2:
- Fixed non working grayscale PNG file opening.

12/3/2022 revision release 1.3.1:
- Decreased the sharpen slider lowest possible value to 5000
- Some textual changes in the about panel
- Minor improvements in opening file
- Fixed bug when cancelling open reference file it would reset all the sliders.

1/3/2022 minor release 1.3.0:
- Replaced ROF denoise with Sigma Filter Plus denoise
- Removed internal conversion to 32-bit depth that sometimes caused issues with color shifting
- Improved gamma & color controls