@@ -2,5 +2,5 @@ package nl.wilcokas.luckystackworker.model;
 
 public enum OperationEnum {
 	RADIUS, AMOUNT, ITERATIONS, LEVEL, DENOISEAMOUNT, DENOISERADIUS, DENOISESIGMA, DENOISEITERATIONS, RED, GREEN, BLUE,
-	GAMMA, SATURATION, CONTRAST, BRIGHTNESS
+	GAMMA, SATURATION, CONTRAST, BRIGHTNESS, BACKGROUND
 }
