@@ -1,4 +1,4 @@
-COPY ..\backend\target\luckystackworker-2.0.1.jar .\LuckyStackWorker-win32-x64\luckystackworker.jar
+COPY ..\backend\target\luckystackworker-2.1.0.jar .\LuckyStackWorker-win32-x64\luckystackworker.jar
 COPY ..\backend\lsw_db.mv.db .\LuckyStackWorker-win32-x64\
 COPY .\LuckyStackWorker-win32-x64\\resources\app\LICENSE_LSW.txt .\LuckyStackWorker-win32-x64
 COPY .\LuckyStackWorker-win32-x64\\resources\app\release_notes.txt .\LuckyStackWorker-win32-x64
