@@ -1,7 +1,7 @@
 {
   "name": "luckystackworker",
   "productName": "LuckyStackWorker",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "main": "app.js",
   "scripts": {
     "ng": "ng",
